# mongo-webapp-sample

./: .gitignore  .stestr.conf  Dockerfile  README.md  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
k8s_charm/: config.yaml  metadata.yaml  requirements.txt
k8s_charm/src/: charm.py
mongo_webapp_sample/: conf.py  exception.py  utils.py
mongo_webapp_sample/api/controllers/: base.py  stores.py
mongo_webapp_sample/api/schema/: products.py  stores.py
mongo_webapp_sample/cmd/: api.py
mongo_webapp_sample/db/: api.py
mongo_webapp_sample/tests/: fake_stores.py  http_client.py
mongo_webapp_sample/tests/functional/: test_base.py  test_stores.py
