[project]
name = "mongo_webapp_sample"
version = "0.0.1"
authors = [
  {name="Lucian Petrut", email="lpetrut@cloudbasesolutions.com" },
]
description = "A sample MongoDB web application for Canonical trainings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
mongo-webapp-sample-api = "mongo_webapp_sample.cmd.api:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
